# mediaclient

./: README.md  default.nix  flake.nix
src/: CMakeLists.txt  entry.cpp  entry.h  main.cpp  main.qml  mediaclient.cpp  mediaclient.h  mpvobject.cpp  mpvrenderer.cpp  mpvrenderer.h  result
